--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
 
     // Motion Toast
     implementation 'com.github.Spikeysanju:MotionToast:1.4'
+
+    // Facebook Shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
 }
