--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,6 @@ plugins {
     id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
     id("com.google.dagger.hilt.android") version "2.48" apply false
+    // Safe args
+    id 'androidx.navigation.safeargs' version '2.5.0' apply false
 }
